add spark sql code

--- a/Home_Sales.ipynb
+++ b/Home_Sales.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "2XbWNf1Te5fM"
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -43,28 +43,48 @@
     "id": "wOJqxG_RPSwp",
     "outputId": "7857ef9f-5b04-405d-f5aa-e535dfe7870c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+----------+----------+------+--------+---------+-----------+--------+------+----------+----+\n",
+      "|                  id|      date|date_built| price|bedrooms|bathrooms|sqft_living|sqft_lot|floors|waterfront|view|\n",
+      "+--------------------+----------+----------+------+--------+---------+-----------+--------+------+----------+----+\n",
+      "|f8a53099-ba1c-47d...|2022-04-08|      2016|936923|       4|        3|       3167|   11733|     2|         1|  76|\n",
+      "|7530a2d8-1ae3-451...|2021-06-13|      2013|379628|       2|        2|       2235|   14384|     1|         0|  23|\n",
+      "|43de979c-0bf0-4c9...|2019-04-12|      2014|417866|       2|        2|       2127|   10575|     2|         0|   0|\n",
+      "|b672c137-b88c-48b...|2019-10-16|      2016|239895|       2|        2|       1631|   11149|     2|         0|   0|\n",
+      "|e0726d4d-d595-407...|2022-01-08|      2017|424418|       3|        2|       2249|   13878|     2|         0|   4|\n",
+      "+--------------------+----------+----------+------+--------+---------+-----------+--------+------+----------+----+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 1. Read in the AWS S3 bucket into a DataFrame.\n",
     "url = \"https://2u-data-curriculum-team.s3.amazonaws.com/dataviz-classroom/v1.2/22-big-data/home_sales_revised.csv\"\n",
-    "\n"
+    "spark.sparkContext.addFile(url)\n",
+    "df = spark.read.option('header', 'true').csv(SparkFiles.get(\"home_sales_revised.csv\"), inferSchema=True, sep=',')\n",
+    "df.show(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "RoljcJ7WPpnm"
    },
    "outputs": [],
    "source": [
     "# 2. Create a temporary view of the DataFrame.\n",
-    "\n"
+    "df.createOrReplaceTempView('home_sales')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -72,15 +92,38 @@
     "id": "L6fkwOeOmqvq",
     "outputId": "bdded620-79c4-488d-c7a5-91c6799c419e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+---------+\n",
+      "|year|avg_price|\n",
+      "+----+---------+\n",
+      "|2019| 300263.7|\n",
+      "|2020|298353.78|\n",
+      "|2021|301819.44|\n",
+      "|2022|296363.88|\n",
+      "+----+---------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 3. What is the average price for a four bedroom house sold in each year rounded to two decimal places?\n",
-    "\n"
+    "spark.sql(\"\"\"\n",
+    "          SELECT\n",
+    "            YEAR(date) AS year,\n",
+    "            round(avg(price), 2) AS avg_price\n",
+    "          FROM home_sales\n",
+    "          WHERE bedrooms=4\n",
+    "          GROUP BY year\n",
+    "          ORDER BY year\"\"\").show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -88,15 +131,38 @@
     "id": "l8p_tUS8h8it",
     "outputId": "65806e5f-6262-41c0-ff65-5107464e5c4d"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+---------+\n",
+      "|year|avg_price|\n",
+      "+----+---------+\n",
+      "|2019|287287.82|\n",
+      "|2020|294204.16|\n",
+      "|2021|294211.46|\n",
+      "|2022|292725.69|\n",
+      "+----+---------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 4. What is the average price of a home for each year the home was built that have 3 bedrooms and 3 bathrooms rounded to two decimal places?\n",
-    "\n"
+    "spark.sql(\"\"\"\n",
+    "          SELECT\n",
+    "            YEAR(date) AS year,\n",
+    "            round(avg(price), 2) AS avg_price\n",
+    "          FROM home_sales\n",
+    "          WHERE bedrooms=3 AND bathrooms=3\n",
+    "          GROUP BY year\n",
+    "          ORDER BY year\"\"\").show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -104,16 +170,43 @@
     "id": "Y-Eytz64liDU",
     "outputId": "17119810-56ad-40c3-de5e-c3db57e43bcc"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+---------+\n",
+      "|year|avg_price|\n",
+      "+----+---------+\n",
+      "|2019|289859.14|\n",
+      "|2020|292289.09|\n",
+      "|2021|296330.96|\n",
+      "|2022|290242.99|\n",
+      "+----+---------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "#  5. What is the average price of a home for each year built that have 3 bedrooms, 3 bathrooms, with two floors,\n",
     "# and are greater than or equal to 2,000 square feet rounded to two decimal places?\n",
-    "\n"
+    "spark.sql(\"\"\"\n",
+    "          SELECT\n",
+    "            YEAR(date) AS year,\n",
+    "            round(avg(price), 2) AS avg_price\n",
+    "          FROM home_sales\n",
+    "          WHERE\n",
+    "            bedrooms=3\n",
+    "            AND bathrooms=3\n",
+    "            AND floors=2\n",
+    "            AND sqft_living>=2000\n",
+    "          GROUP BY year\n",
+    "          ORDER BY year\"\"\").show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -121,16 +214,58 @@
     "id": "GUrfgOX1pCRd",
     "outputId": "17c25774-855e-4290-a4bd-a04902bdc13a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+----------+\n",
+      "|view| avg_price|\n",
+      "+----+----------+\n",
+      "| 100| 1026669.5|\n",
+      "|  99|1061201.42|\n",
+      "|  98|1053739.33|\n",
+      "|  97|1129040.15|\n",
+      "|  96|1017815.92|\n",
+      "|  95| 1054325.6|\n",
+      "|  94| 1033536.2|\n",
+      "|  93|1026006.06|\n",
+      "|  92| 970402.55|\n",
+      "|  91|1137372.73|\n",
+      "|  90|1062654.16|\n",
+      "|  89|1107839.15|\n",
+      "|  88|1031719.35|\n",
+      "|  87| 1072285.2|\n",
+      "|  86|1070444.25|\n",
+      "|  85|1056336.74|\n",
+      "|  84|1117233.13|\n",
+      "|  83|1033965.93|\n",
+      "|  82| 1063498.0|\n",
+      "|  81|1053472.79|\n",
+      "+----+----------+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "--- 0.2756383419036865 seconds ---\n"
+     ]
+    }
+   ],
    "source": [
     "# 6. What is the \"view\" rating for the average price of a home, rounded to two decimal places, where the homes are greater than\n",
     "# or equal to $350,000? Although this is a small dataset, determine the run time for this query.\n",
     "\n",
     "start_time = time.time()\n",
     "\n",
+    "spark.sql(\"\"\"\n",
+    "          SELECT\n",
+    "            view,\n",
+    "            round(avg(price), 2) AS avg_price\n",
+    "          FROM home_sales\n",
+    "          WHERE\n",
+    "            price>=350000\n",
+    "          GROUP BY view\n",
+    "          ORDER BY view desc\"\"\").show()\n",
     "\n",
-    "\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+    "print(f\"--- {time.time() - start_time} seconds ---\")"
    ]
   },
   {
@@ -183,7 +318,7 @@
     "\n",
     "\n",
     "\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))\n"
+    "print(f\"--- {time.time() - start_time} seconds ---\")\n"
    ]
   },
   {
@@ -239,7 +374,7 @@
     "\n",
     "\n",
     "\n",
-    "print(\"--- %s seconds ---\" % (time.time() - start_time))"
+    "print(f\"--- {time.time() - start_time} seconds ---\")"
    ]
   },
   {
