add cache and partition sections + fix/format SQL queries

--- a/Home_Sales.ipynb
+++ b/Home_Sales.ipynb
@@ -12,7 +12,6 @@
    },
    "outputs": [],
    "source": [
-    "# Import findspark and initialize. \n",
     "import findspark\n",
     "findspark.init()"
    ]
@@ -25,9 +24,10 @@
    },
    "outputs": [],
    "source": [
+    "import time\n",
+    "\n",
     "from pyspark import SparkFiles\n",
     "from pyspark.sql import SparkSession\n",
-    "import time\n",
     "\n",
     "# Create a SparkSession\n",
     "spark = SparkSession.builder.appName(\"SparkSQL\").getOrCreate()"
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -114,7 +114,7 @@
     "spark.sql(\"\"\"\n",
     "          SELECT\n",
     "            YEAR(date) AS year,\n",
-    "            round(avg(price), 2) AS avg_price\n",
+    "            ROUND(AVG(price), 2) AS avg_price\n",
     "          FROM home_sales\n",
     "          WHERE bedrooms=4\n",
     "          GROUP BY year\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -153,7 +153,7 @@
     "spark.sql(\"\"\"\n",
     "          SELECT\n",
     "            YEAR(date) AS year,\n",
-    "            round(avg(price), 2) AS avg_price\n",
+    "            ROUND(AVG(price), 2) AS avg_price\n",
     "          FROM home_sales\n",
     "          WHERE bedrooms=3 AND bathrooms=3\n",
     "          GROUP BY year\n",
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -193,7 +193,7 @@
     "spark.sql(\"\"\"\n",
     "          SELECT\n",
     "            YEAR(date) AS year,\n",
-    "            round(avg(price), 2) AS avg_price\n",
+    "            ROUND(AVG(price), 2) AS avg_price\n",
     "          FROM home_sales\n",
     "          WHERE\n",
     "            bedrooms=3\n",
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -245,7 +245,7 @@
       "+----+----------+\n",
       "only showing top 20 rows\n",
       "\n",
-      "--- 0.2756383419036865 seconds ---\n"
+      "--- 0.19148921966552734 seconds ---\n"
      ]
     }
    ],
@@ -255,22 +255,24 @@
     "\n",
     "start_time = time.time()\n",
     "\n",
-    "spark.sql(\"\"\"\n",
-    "          SELECT\n",
-    "            view,\n",
-    "            round(avg(price), 2) AS avg_price\n",
-    "          FROM home_sales\n",
-    "          WHERE\n",
-    "            price>=350000\n",
-    "          GROUP BY view\n",
-    "          ORDER BY view desc\"\"\").show()\n",
+    "# This query will be used multiple times, save it to a variable\n",
+    "QUERY_VIEW_RATING = \"\"\"\n",
+    "                    SELECT\n",
+    "                        view,\n",
+    "                        ROUND(AVG(price), 2) AS avg_price\n",
+    "                    FROM home_sales\n",
+    "                    GROUP BY view\n",
+    "                    HAVING avg_price >= 350000\n",
+    "                    ORDER BY view DESC\n",
+    "                    \"\"\"\n",
+    "spark.sql(QUERY_VIEW_RATING).show()\n",
     "\n",
     "print(f\"--- {time.time() - start_time} seconds ---\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -278,14 +280,26 @@
     "id": "KAhk3ZD2tFy8",
     "outputId": "0a8f132d-40a8-4bd4-b5f2-2847e98427f5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 7. Cache the the temporary table home_sales.\n"
+    "# 7. Cache the the temporary table home_sales.\n",
+    "spark.sql(\"cache table home_sales\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -293,7 +307,18 @@
     "id": "4opVhbvxtL-i",
     "outputId": "38ec8487-795f-4550-b50c-fcc6f2b7c769"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 8. Check if the table is cached.\n",
     "spark.catalog.isCached('home_sales')"
@@ -301,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -309,54 +334,91 @@
     "id": "5GnL46lwTSEk",
     "outputId": "09a16c73-194d-4371-95d1-ee64fe83b91c"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+----------+\n",
+      "|view| avg_price|\n",
+      "+----+----------+\n",
+      "| 100| 1026669.5|\n",
+      "|  99|1061201.42|\n",
+      "|  98|1053739.33|\n",
+      "|  97|1129040.15|\n",
+      "|  96|1017815.92|\n",
+      "|  95| 1054325.6|\n",
+      "|  94| 1033536.2|\n",
+      "|  93|1026006.06|\n",
+      "|  92| 970402.55|\n",
+      "|  91|1137372.73|\n",
+      "|  90|1062654.16|\n",
+      "|  89|1107839.15|\n",
+      "|  88|1031719.35|\n",
+      "|  87| 1072285.2|\n",
+      "|  86|1070444.25|\n",
+      "|  85|1056336.74|\n",
+      "|  84|1117233.13|\n",
+      "|  83|1033965.93|\n",
+      "|  82| 1063498.0|\n",
+      "|  81|1053472.79|\n",
+      "+----+----------+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "--- 0.1376194953918457 seconds ---\n"
+     ]
+    }
+   ],
    "source": [
     "# 9. Using the cached data, run the query that filters out the view ratings with average price \n",
     "#  greater than or equal to $350,000. Determine the runtime and compare it to uncached runtime.\n",
     "\n",
     "start_time = time.time()\n",
     "\n",
+    "spark.sql(QUERY_VIEW_RATING).show()\n",
     "\n",
-    "\n",
-    "print(f\"--- {time.time() - start_time} seconds ---\")\n"
+    "print(f\"--- {time.time() - start_time} seconds ---\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "id": "Qm12WN9isHBR"
    },
    "outputs": [],
    "source": [
-    "# 10. Partition by the \"date_built\" field on the formatted parquet home sales data \n"
+    "# 10. Partition by the \"date_built\" field on the formatted parquet home sales data \n",
+    "df.write.partitionBy(\"date_built\").parquet(\"date_built_partitioned\", mode=\"overwrite\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "id": "AZ7BgY61sRqY"
    },
    "outputs": [],
    "source": [
-    "# 11. Read the formatted parquet data.\n"
+    "# 11. Read the formatted parquet data.\n",
+    "p_df = spark.read.parquet('date_built_partitioned')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "id": "J6MJkHfvVcvh"
    },
    "outputs": [],
    "source": [
-    "# 12. Create a temporary table for the parquet data.\n"
+    "# 12. Create a temporary table for the parquet data.\n",
+    "p_df.createOrReplaceTempView('home_sales_partitioned')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -364,22 +426,66 @@
     "id": "G_Vhb52rU1Sn",
     "outputId": "a0b8d0c4-55ed-4c6c-bfd8-4c8c5334838e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+----------+\n",
+      "|view| avg_price|\n",
+      "+----+----------+\n",
+      "| 100| 1026669.5|\n",
+      "|  99|1061201.42|\n",
+      "|  98|1053739.33|\n",
+      "|  97|1129040.15|\n",
+      "|  96|1017815.92|\n",
+      "|  95| 1054325.6|\n",
+      "|  94| 1033536.2|\n",
+      "|  93|1026006.06|\n",
+      "|  92| 970402.55|\n",
+      "|  91|1137372.73|\n",
+      "|  90|1062654.16|\n",
+      "|  89|1107839.15|\n",
+      "|  88|1031719.35|\n",
+      "|  87| 1072285.2|\n",
+      "|  86|1070444.25|\n",
+      "|  85|1056336.74|\n",
+      "|  84|1117233.13|\n",
+      "|  83|1033965.93|\n",
+      "|  82| 1063498.0|\n",
+      "|  81|1053472.79|\n",
+      "+----+----------+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "--- 0.25058960914611816 seconds ---\n"
+     ]
+    }
+   ],
    "source": [
-    "# 13. Run the query that filters out the view ratings with average price of greater than or eqaul to $350,000 \n",
+    "# 13. Run the query that filters out the view ratings with average price of greater than or equal to $350,000 \n",
     "# with the parquet DataFrame. Round your average to two decimal places. \n",
     "# Determine the runtime and compare it to the cached version. \n",
     "\n",
     "start_time = time.time()\n",
     "\n",
-    "\n",
+    "# make sure to update the `FROM` to the new temp view table\n",
+    "QUERY_VIEW_RATING_PARTITION = \"\"\"\n",
+    "                              SELECT\n",
+    "                                  view,\n",
+    "                                  ROUND(AVG(price), 2) AS avg_price\n",
+    "                              FROM home_sales_partitioned\n",
+    "                              GROUP BY view\n",
+    "                              HAVING avg_price >= 350000\n",
+    "                              ORDER BY view DESC\n",
+    "                              \"\"\"\n",
+    "spark.sql(QUERY_VIEW_RATING_PARTITION).show()\n",
     "\n",
     "print(f\"--- {time.time() - start_time} seconds ---\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -387,14 +493,26 @@
     "id": "hjjYzQGjtbq8",
     "outputId": "830549fd-bb41-451b-9183-5ebf6e3e470b"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 14. Uncache the home_sales temporary table.\n"
+    "# 14. Uncache the home_sales temporary table.\n",
+    "spark.sql(\"uncache table home_sales\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -402,18 +520,31 @@
     "id": "Sy9NBvO7tlmm",
     "outputId": "be73e0e3-5e85-4794-aad9-025fb6fa84a7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 15. Check if the home_sales is no longer cached\n",
-    "\n"
+    "spark.catalog.isCached(\"home_sales\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "spark.stop()"
+   ]
   }
  ],
  "metadata": {
