fix query 4/5 to date_built

--- a/Home_Sales.ipynb
+++ b/Home_Sales.ipynb
@@ -136,14 +136,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----+---------+\n",
-      "|year|avg_price|\n",
-      "+----+---------+\n",
-      "|2019|287287.82|\n",
-      "|2020|294204.16|\n",
-      "|2021|294211.46|\n",
-      "|2022|292725.69|\n",
-      "+----+---------+\n",
+      "+----------+---------+\n",
+      "|date_built|avg_price|\n",
+      "+----------+---------+\n",
+      "|      2010|292859.62|\n",
+      "|      2011|291117.47|\n",
+      "|      2012|293683.19|\n",
+      "|      2013|295962.27|\n",
+      "|      2014|290852.27|\n",
+      "|      2015| 288770.3|\n",
+      "|      2016|290555.07|\n",
+      "|      2017|292676.79|\n",
+      "+----------+---------+\n",
       "\n"
      ]
     }
@@ -152,12 +156,12 @@
     "# 4. What is the average price of a home for each year the home was built that have 3 bedrooms and 3 bathrooms rounded to two decimal places?\n",
     "spark.sql(\"\"\"\n",
     "          SELECT\n",
-    "            YEAR(date) AS year,\n",
+    "            date_built,\n",
     "            ROUND(AVG(price), 2) AS avg_price\n",
     "          FROM home_sales\n",
     "          WHERE bedrooms=3 AND bathrooms=3\n",
-    "          GROUP BY year\n",
-    "          ORDER BY year\"\"\").show()"
+    "          GROUP BY date_built\n",
+    "          ORDER BY date_built\"\"\").show()"
    ]
   },
   {
@@ -175,14 +179,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----+---------+\n",
-      "|year|avg_price|\n",
-      "+----+---------+\n",
-      "|2019|289859.14|\n",
-      "|2020|292289.09|\n",
-      "|2021|296330.96|\n",
-      "|2022|290242.99|\n",
-      "+----+---------+\n",
+      "+----------+---------+\n",
+      "|date_built|avg_price|\n",
+      "+----------+---------+\n",
+      "|      2010|285010.22|\n",
+      "|      2011|276553.81|\n",
+      "|      2012|307539.97|\n",
+      "|      2013|303676.79|\n",
+      "|      2014|298264.72|\n",
+      "|      2015|297609.97|\n",
+      "|      2016| 293965.1|\n",
+      "|      2017|280317.58|\n",
+      "+----------+---------+\n",
       "\n"
      ]
     }
@@ -192,7 +200,7 @@
     "# and are greater than or equal to 2,000 square feet rounded to two decimal places?\n",
     "spark.sql(\"\"\"\n",
     "          SELECT\n",
-    "            YEAR(date) AS year,\n",
+    "            date_built,\n",
     "            ROUND(AVG(price), 2) AS avg_price\n",
     "          FROM home_sales\n",
     "          WHERE\n",
@@ -200,8 +208,8 @@
     "            AND bathrooms=3\n",
     "            AND floors=2\n",
     "            AND sqft_living>=2000\n",
-    "          GROUP BY year\n",
-    "          ORDER BY year\"\"\").show()"
+    "          GROUP BY date_built\n",
+    "          ORDER BY date_built\"\"\").show()"
    ]
   },
   {
